Add recipe pages
Added remaining recipes and respective pictures as well as links to each page within site

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>ODIN RECIPES</h1>
     <a href="./recipes/lasagna.html">Lasagna</a>
+    <a href="./recipes/baked-ziti.html">Baked Ziti</a>
+    <a href="./recipes/chili-mac.html">Chili Mac</a>
+    <a href="./recipes/chicken-noodle-soup.html">Chicken Noodle Soup</a>
 </body>
 </html>
