--- a/recipes/chicken-noodle-soup.html
+++ b/recipes/chicken-noodle-soup.html
@@ -3,67 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chicken Noodle Soup</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>      <a href="lasagna.html">Lasagna</a>
+    <a href="baked-ziti.html">Baked Ziti</a>
+    <a href="chili-mac.html">Chili Mac</a>
+    <a href="chicken-noodle-soup.html">Chicken Noodle Soup</a>
     <h1>CHICKEN NOODLE SOUP</h1>
-    <img src="../images/lasagna.jpg" alt="">
-    <h3>You need this home-made lasagna!</h3>
+    <img src="../images/chicken-noodle-soup.jpg" alt="picture of chicken noodle soup">
+    <h3>Indulgent and soulful soup</h3>
     <h2>Ingredients</h2>
     <ul>
-<li>½ pound ground pork</li>
+<li>13 c. chicken stock</li>
+<li>1/4 c. dry vermouth</li>
+<li>1/4 c. butter</li>
+<li> 1 c. half and half</li>
+<li>1/2 lb. (4 c.) med. egg noodles</li>
+<li>3/4 c. flour</li>
+<li>1 1/4 c. water</li>
+<li>2 cups mirepoix</li>
+<li> 2 c. diced, cooked chicken</li>
+<li>Salt and pepper to taste</li>
 
-<li>½ pound lean ground beef</li>
-
-<li>½ cup minced onion</li>
-
-<li>1 (28 ounce) can crushed tomatoes</li>
-
-<li>1 (8 ounce) can tomato sauce
-</li>
-<li>2 tablespoons chopped fresh parsley, divided
-</li>
-<li>1 clove garlic, crushed</li>
-
-<li>1 ½ teaspoons dried basil</li>
-
-<li>1 ½ teaspoons salt</li>
-
-<li>½ teaspoon dried oregano</li>
-
-<li>⅛ teaspoon white sugar</li>
-
-<li>1 (16 ounce) package lasagna noodles</li>
-
-<li>1 pound small-curd cottage cheese
-</li>
-<li>¾ cup grated Parmesan cheese
-</li>
-<li>3 large eggs</li>
-
-<li>2 teaspoons salt</li>
-
-<li>¼ teaspoon ground black pepper</li>
-
-<li>1 (16 ounce) package shredded mozzarella cheese</li>
     </ul>
     <h2>Directions</h2>
 <ol>
-<li>Combine pork and ground beef in a large, deep skillet over medium-high heat; cook and stir until browned and crumbly, 5 to 7 minutes. Add onion and cook until translucent, about 5 minutes.</li>
+<li>Combine 1 cup of stock, vermouth and butter. Bring to a boil and boil rapidly until mixture is reduced to 1/4 cup (syrupy consistency). Stir in half and half; set aside.</li>
 
-<li>Stir in crushed tomatoes, tomato sauce, 1 tablespoon fresh parsley, garlic, basil, salt, oregano, and sugar. Reduce heat to medium-low and simmer, stirring occasionally, for 30 minutes.</li>
+<li>Sauté mirepoix, set aside. </li>
 
-<li>While the sauce is simmering, bring a large pot of lightly salted water to a boil. Cook lasagna noodles in the boiling water, stirring occasionally, until tender yet firm to the bite, 8 to 10 minutes. Drain and set aside.</li>
-
-<li>While the noodles are cooking, preheat the oven to 375 degrees F (190 degrees C).</li>
-
-<li>Mix cottage cheese, Parmesan cheese, eggs, remaining 1 tablespoon fresh parsley, salt, and pepper in a large bowl until combined.</li>
-
-<li>Assemble lasagna: Spread a spoon or two of sauce over the bottom of a 9x13-inch baking dish just to to coat it. Place two layers of noodles over the sauce to cover. Layer with 1/2 of the cheese mixture, 1/2 of the remaining sauce, and 1/2 of the mozzarella cheese. Repeat layers once more using the remaining noodles, cheese mixture, sauce, and mozzarella. Cover the baking dish with aluminum foil.</li>
-
-<li>ake in the preheated oven for 30 to 40 minutes. Remove the foil and bake until cheese is golden brown, 5 to 10 more minutes.</li>
-
-<li>Remove from the oven and let stand for 10 minutes before cutting and serving.</li>
+<li>Heat remaining stock to a boil. Add noodles and cook until tender. Blend flour with water until smooth. Stir into noodles. Stir until mixture boils 1 or 2 minutes. Add cream mixture, mirepoix, and chicken. Season with salt and pepper. Makes 15 cups.</li>
 </ol>
 </body>
 </html>
