--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>    <a href="lasagna.html">Lasagna</a>
+    <a href="baked-ziti.html">Baked Ziti</a>
+    <a href="chili-mac.html">Chili Mac</a>
+    <a href="chicken-noodle-soup.html">Chicken Noodle Soup</a>
     <h1>LASAGNA</h1>
-    <img src="../images/lasagna.jpg" alt="">
+    <img src="../images/lasagna.jpg" alt="picture of lasagna">
     <h3>You need this home-made lasagna!</h3>
     <h2>Ingredients</h2>
     <ul>
@@ -61,7 +65,7 @@
 
 <li>Assemble lasagna: Spread a spoon or two of sauce over the bottom of a 9x13-inch baking dish just to to coat it. Place two layers of noodles over the sauce to cover. Layer with 1/2 of the cheese mixture, 1/2 of the remaining sauce, and 1/2 of the mozzarella cheese. Repeat layers once more using the remaining noodles, cheese mixture, sauce, and mozzarella. Cover the baking dish with aluminum foil.</li>
 
-<li>ake in the preheated oven for 30 to 40 minutes. Remove the foil and bake until cheese is golden brown, 5 to 10 more minutes.</li>
+<li>Bake in the preheated oven for 30 to 40 minutes. Remove the foil and bake until cheese is golden brown, 5 to 10 more minutes.</li>
 
 <li>Remove from the oven and let stand for 10 minutes before cutting and serving.</li>
 </ol>
