--- a/recipes/baked-ziti.html
+++ b/recipes/baked-ziti.html
@@ -3,65 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Baked Ziti</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>     
+    <a href="lasagna.html">Lasagna</a>
+    <a href="baked-ziti.html">Baked Ziti</a>
+    <a href="chili-mac.html">Chili Mac</a>
+    <a href="chicken-noodle-soup.html">Chicken Noodle Soup</a>
     <h1>BAKED ZITI</h1>
-    <img src="../images/lasagna.jpg" alt="">
-    <h3>You need this home-made lasagna!</h3>
+    <img src="../images/baked-ziti.webp" alt="picture of baked ziti">
+    <h3>An easy weeknight treat</h3>
     <h2>Ingredients</h2>
     <ul>
-<li>½ pound ground pork</li>
-
-<li>½ pound lean ground beef</li>
-
-<li>½ cup minced onion</li>
-
-<li>1 (28 ounce) can crushed tomatoes</li>
-
-<li>1 (8 ounce) can tomato sauce
-</li>
-<li>2 tablespoons chopped fresh parsley, divided
-</li>
-<li>1 clove garlic, crushed</li>
-
-<li>1 ½ teaspoons dried basil</li>
-
-<li>1 ½ teaspoons salt</li>
-
-<li>½ teaspoon dried oregano</li>
-
-<li>⅛ teaspoon white sugar</li>
-
-<li>1 (16 ounce) package lasagna noodles</li>
-
-<li>1 pound small-curd cottage cheese
-</li>
-<li>¾ cup grated Parmesan cheese
-</li>
-<li>3 large eggs</li>
-
-<li>2 teaspoons salt</li>
-
-<li>¼ teaspoon ground black pepper</li>
-
-<li>1 (16 ounce) package shredded mozzarella cheese</li>
+<li>¾ pound hot Italian sausage</li>
+<li>¾ pound sweet Italian sausage</li>
+<li>2 tablespoons olive oil</li>
+<li>1 large yellow onion, diced</li>
+<li>1½ teaspoon dried oregano</li>
+<li> ¼ teaspoon dried thyme</li>
+<li>¼ teaspoon dried rosemary</li>
+<li>2 (24 ounce) jars prepared marinara sauce</li>
+<li>2 cups water</li>
+<li>1 (16 ounce) package ziti pasta</li>
+<li>1 drizzle olive oil</li>
+<li>1 ½ cups whole-milk ricotta cheese</li>
+<li>8 ounces mozzarella cheese, cut into small cubes</li>
+<li>1 cup grated Pecorino Romano cheese</li>
+<li> 1 teaspoon chopped flat-leaf (Italian) parsley, or to taste</li>
     </ul>
     <h2>Directions</h2>
 <ol>
-<li>Combine pork and ground beef in a large, deep skillet over medium-high heat; cook and stir until browned and crumbly, 5 to 7 minutes. Add onion and cook until translucent, about 5 minutes.</li>
+<li>Cut down the length of each sausage with a sharp knife. Remove and discard casings.
 
-<li>Stir in crushed tomatoes, tomato sauce, 1 tablespoon fresh parsley, garlic, basil, salt, oregano, and sugar. Reduce heat to medium-low and simmer, stirring occasionally, for 30 minutes.</li>
+    Heat olive oil in a large saucepan set over high heat. Add sausages and onion. Cook, stirring occasionally and breaking up with a spatula, until sausage begins to brown, and onion turns translucent, 5 to 7 minutes. Add oregano, thyme, and rosemary and cook for 1 minute more. Pour in marinara sauce. Pour 1 cup water into each jar to rinse out remaining sauce; add to the saucepan. Stir together and bring sauce to a simmer.</li>
 
-<li>While the sauce is simmering, bring a large pot of lightly salted water to a boil. Cook lasagna noodles in the boiling water, stirring occasionally, until tender yet firm to the bite, 8 to 10 minutes. Drain and set aside.</li>
+<li>Reduce the heat to medium-low, and let simmer, stirring occasionally, for 1 hour. Taste for seasoning and adjust if needed. Turn off heat and reserve until needed. Before using, skim any excess fat that rises to the surface.</li>
 
-<li>While the noodles are cooking, preheat the oven to 375 degrees F (190 degrees C).</li>
+<li>While sauce simmers, bring a large pot of generously salted water to a boil. Add ziti and cook, stirring occasionally, for 1 or 2 minutes less than the directions on the package call for, about 8 minutes. Drain well and transfer into a large mixing bowl.</li>
 
-<li>Mix cottage cheese, Parmesan cheese, eggs, remaining 1 tablespoon fresh parsley, salt, and pepper in a large bowl until combined.</li>
+<li>Carefully add the meat sauce and stir until thoroughly combined. Let rest for 5 minutes.</li>
 
-<li>Assemble lasagna: Spread a spoon or two of sauce over the bottom of a 9x13-inch baking dish just to to coat it. Place two layers of noodles over the sauce to cover. Layer with 1/2 of the cheese mixture, 1/2 of the remaining sauce, and 1/2 of the mozzarella cheese. Repeat layers once more using the remaining noodles, cheese mixture, sauce, and mozzarella. Cover the baking dish with aluminum foil.</li>
+<li>Meanwhile, preheat the oven to 375 degrees F (190 degrees C). Grease a large 9x15-inch or 9x13-inch casserole dish with a drizzle of olive oil.</li>
 
-<li>ake in the preheated oven for 30 to 40 minutes. Remove the foil and bake until cheese is golden brown, 5 to 10 more minutes.</li>
+<li> Use a slotted spoon to transfer half of the pasta and sauce mixture to the prepared dish, then use a spatula to even out into a uniform layer. Top with 1/2 of the ricotta cheese, 1/2 of the mozzarella cheese, and then 1/2 of the grated Pecorino Romano cheese, being sure to distribute evenly. Top with the rest of the pasta and sauce mixture and give the pan a little shake to settle the sauce. Repeat the cheese application.</li>
+
+<li>Bake in the center of the preheated oven until the cheese is melted and the casserole is piping hot, 30 to 35 minutes. Remove from the oven and let cool 10 to 15 minutes before serving. Top with parsley.</li>
 
 <li>Remove from the oven and let stand for 10 minutes before cutting and serving.</li>
 </ol>
