--- a/recipes/chili-mac.html
+++ b/recipes/chili-mac.html
@@ -3,65 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chili Mac</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>      <a href="lasagna.html">Lasagna</a>
+    <a href="baked-ziti.html">Baked Ziti</a>
+    <a href="chili-mac.html">Chili Mac</a>
+    <a href="chicken-noodle-soup.html">Chicken Noodle Soup</a>
     <h1>CHILI MAC</h1>
-    <img src="../images/lasagna.jpg" alt="">
-    <h3>You need this home-made lasagna!</h3>
+    <img src="../images/chili-mac.jpg" alt="picture of chili-mac">
+    <h3>One pot! Endless satisfaction.</h3>
     <h2>Ingredients</h2>
     <ul>
-<li>½ pound ground pork</li>
+<li>1 tablespoon extra virgin olive oil</li>
+<li>1 medium sweet onion, diced small</li>
+<li> 3 cloves garlic, minced</li>
+<li> 1 pound lean ground beef</li>
+<li> 2 cups low-sodium chicken broth</li>
+<li> 8 oz can tomato sauce</li>
+<li>1 (10 ounce) can diced tomatoes with green chile peppers</li>
 
-<li>½ pound lean ground beef</li>
-
-<li>½ cup minced onion</li>
-
-<li>1 (28 ounce) can crushed tomatoes</li>
-
-<li>1 (8 ounce) can tomato sauce
-</li>
-<li>2 tablespoons chopped fresh parsley, divided
-</li>
-<li>1 clove garlic, crushed</li>
-
-<li>1 ½ teaspoons dried basil</li>
-
-<li>1 ½ teaspoons salt</li>
-
-<li>½ teaspoon dried oregano</li>
-
-<li>⅛ teaspoon white sugar</li>
-
-<li>1 (16 ounce) package lasagna noodles</li>
-
-<li>1 pound small-curd cottage cheese
-</li>
-<li>¾ cup grated Parmesan cheese
-</li>
-<li>3 large eggs</li>
-
-<li>2 teaspoons salt</li>
-
-<li>¼ teaspoon ground black pepper</li>
-
-<li>1 (16 ounce) package shredded mozzarella cheese</li>
+<li>1 teaspoon chili powder</li>
+<li>1 teaspoon cumin</li>
+<li>salt and ground black pepper to taste</li>
+<li> 2 ½ cups uncooked elbow macaroni</li>
+<li>1 cup shredded Cheddar cheese, plus 2 tablespoons</li>
+<li>¼ cup chopped fresh parsley</li>
     </ul>
     <h2>Directions</h2>
 <ol>
-<li>Combine pork and ground beef in a large, deep skillet over medium-high heat; cook and stir until browned and crumbly, 5 to 7 minutes. Add onion and cook until translucent, about 5 minutes.</li>
+<li>Sauté ground beef in a large, deep skillet over medium-high heat; cook and stir until browned and crumbly, 5 to 7 minutes. Add onion and cook until translucent, about 5 minutes.</li>
 
-<li>Stir in crushed tomatoes, tomato sauce, 1 tablespoon fresh parsley, garlic, basil, salt, oregano, and sugar. Reduce heat to medium-low and simmer, stirring occasionally, for 30 minutes.</li>
+<li>Stir in diced tomatoes, tomato sauce, 1 tablespoon fresh parsley, chili powder, cumin, salt, pepper. Reduce heat to medium-low and simmer, stirring occasionally, for 10 minutes.</li>
 
-<li>While the sauce is simmering, bring a large pot of lightly salted water to a boil. Cook lasagna noodles in the boiling water, stirring occasionally, until tender yet firm to the bite, 8 to 10 minutes. Drain and set aside.</li>
+<li>While the sauce is simmering, bring a large pot of lightly salted water to a boil. Cook macaroni in the boiling water, stirring occasionally, until tender yet firm to the bite, 8 to 10 minutes. Drain and set aside.</li>
 
 <li>While the noodles are cooking, preheat the oven to 375 degrees F (190 degrees C).</li>
 
-<li>Mix cottage cheese, Parmesan cheese, eggs, remaining 1 tablespoon fresh parsley, salt, and pepper in a large bowl until combined.</li>
+<li>Combine noodles and beef mixture. Mix in 1 cup cheese Pour into 8 by 10 baking dish. Cover with aluminum foil</li>
 
-<li>Assemble lasagna: Spread a spoon or two of sauce over the bottom of a 9x13-inch baking dish just to to coat it. Place two layers of noodles over the sauce to cover. Layer with 1/2 of the cheese mixture, 1/2 of the remaining sauce, and 1/2 of the mozzarella cheese. Repeat layers once more using the remaining noodles, cheese mixture, sauce, and mozzarella. Cover the baking dish with aluminum foil.</li>
-
-<li>ake in the preheated oven for 30 to 40 minutes. Remove the foil and bake until cheese is golden brown, 5 to 10 more minutes.</li>
+<li>Bake in the preheated oven for 20-30 minutes. Remove the foil, sprinkle some reserved cheddar ontop and bake until cheese is golden brown, 5 to 10 more minutes.</li>
 
 <li>Remove from the oven and let stand for 10 minutes before cutting and serving.</li>
 </ol>
